--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   },
   "devDependencies": {
     "eslint-utils": "^1.4.0",
-    "mocha": "^6.2.3",
+    "mocha": "^10.1.0",
     "mocha-junit-reporter": "^2.0.0",
-    "mochawesome": "6.2.2"
+    "mochawesome": "^7.1.3"
   }
 }
